<resources>
    <string name="app_name">AndroidToDo</string>

    // MainActivity
    <string name="enter_a_new_item">enter a new item</string>
    <string name="add_item">ADD ITEM</string>
    <string name="new_item_max_length">30</string>

    // EditItemActivity
    <string name="edit_item_below">Edit Item Below:</string>
    <string name="original_text">original text</string>
    <string name="priority">Priority:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="change_date">Change Date</string>
    <string name="date_not_set">Date not set</string>
    <string name="save">Save</string>

    // Custom Adapter individual item
    <string name="item_hint">empty task</string>
    <string name="item_date_label">Due:</string>
    <string name="item_date_hint">not set</string>
    <string name="item_priority">Priority:</string>
    <string name="item_null" />
    <string name="item_priority_hint">PriorityText</string>

    // Menu
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

</resources>
