<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivOverdue"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_width"
        android:layout_alignBottom="@+id/DateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:src="@drawable/overdue"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/todoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivOverdue"
        android:layout_toRightOf="@id/ivOverdue"
        android:hint="@string/item_hint"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/DateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PriorityLabel"
        android:layout_alignTop="@id/PriorityLabel"
        android:layout_toEndOf="@id/ivOverdue"
        android:layout_toRightOf="@id/ivOverdue"
        android:text="@string/item_date_label" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/DateLabel"
        android:layout_marginLeft="@dimen/item_tv_date"
        android:layout_marginStart="@dimen/item_tv_date"
        android:layout_toEndOf="@id/DateLabel"
        android:layout_toRightOf="@id/DateLabel"
        android:hint="@string/item_date_hint"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/PriorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/todoText"
        android:layout_marginEnd="@dimen/item_tv_priority_label"
        android:layout_marginRight="@dimen/item_tv_priority_label"
        android:layout_toLeftOf="@+id/priorityView"
        android:layout_toStartOf="@id/priorityView"
        android:text="@string/item_priority" />

    <TextView
        android:id="@+id/priorityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/todoText"
        android:hint="@string/item_priority_hint"
        android:text="@string/item_null"
        android:textStyle="italic" />


</RelativeLayout>