<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/notification_subtext_size"
    android:paddingLeft="@dimen/notification_subtext_size"
    android:paddingRight="@dimen/notification_subtext_size"
    android:paddingTop="@dimen/notification_subtext_size"
    tools:context=".MainActivity">


    <ListView
        android:id="@+id/lvItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAddItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/BACKGROUND" />

    <EditText
        android:id="@+id/etNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/btnAddItem"
        android:layout_toLeftOf="@id/btnAddItem"
        android:layout_toStartOf="@id/btnAddItem"
        android:editable="true"
        android:hint="@string/enter_a_new_item"
        android:maxLength="@string/new_item_max_length" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onAddItem"
        android:text="@string/add_item" />

</RelativeLayout>
